[package]
name = "rwsh"
version = "0.1.0"
authors = ["Tudor-Ioan Roman <tudurom@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://git.sr.ht/~tudor/rwsh"

[dependencies]
nix = "0.14.1"
regex = "1"
dirs = "2"
clap = "2.33.0"
libc = "0.2"
rustyline = "5.0.0"
result = "1.0.0"
calculate = "0.5.1"
glob = "0.3.0"
bitflags = "1.1.0"
