[package]
name = "rwsh"
version = "0.1.0"
authors = ["Tudor-Ioan Roman <tudurom@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://git.sr.ht/~tudor/rwsh"

[dependencies]
nix = "0.14.1"
regex = "1"
dirs = "2"
getopts = "0.2"
libc = "0.2"
# hotfix for reading escaping characters when terminal is not a tty (cargo run)
rustyline = { git = "https://github.com/kkawakam/rustyline", rev = "fb4ef20" }
result = "1.0.0"
calculate = { git = "https://github.com/redox-os/calc" }
glob = "0.3.0"
bitflags = "1.1.0"
lazy_static = "1.3"

[profile.release]
opt-level = 3
lto = true
debug = false
